--- a/src/web_app/requirements.txt
+++ b/src/web_app/requirements.txt
@@ -1,7 +1,5 @@
-matplotlib==3.2.1
-nltk==3.4.5
+joblib==0.15.1
 numpy==1.18.5
 pandas==1.0.4
 scikit-learn==0.23.1
-seaborn==0.10.1
 streamlit==0.61.0
